Internally used HTMLContentElement subclasses should have correct wrapper. https://bugs.webkit.org/show_bug.cgi?id=80237

Reviewed by Kent Tamura.

Source/WebCore:

DetailsContentElement and DetailsSummaryElement used to use
<div> as their tag name. But this means they are wrapped by
wrapper objects for HTMLDivElement, which is wrong. This happened
to work though because HTMLDivElement has no extra state or API.

This change introduces "noConstructor" keyword for make_name.pl
sources.  This keyword allows a tag name to specify its own
wrapper without making the tag name visible from the parser, or
HTMLElementFactory in precise.

Following this addition, this change also adds a new tag name
"webkitShadowContent" for DetailsContentElement and DetailsSummaryElement,
which has no constructor, and whose wrapper type is HTMLElement.

This change isn't visible from the page author and only matters for testing.

Test: fast/dom/shadow/content-element-user-agent-shadow.html

* dom/make_names.pl:
(defaultTagPropertyHash):
(buildConstructorMap):
(printConstructors):
(printFunctionInits):
* html/HTMLDetailsElement.cpp:
(WebCore::DetailsContentElement::DetailsContentElement):
(WebCore::DetailsSummaryElement::DetailsSummaryElement):
* html/HTMLTagNames.in:
* html/shadow/HTMLContentElement.cpp:
(WebCore::contentTagName):

LayoutTests:

* fast/dom/shadow/content-element-user-agent-shadow-expected.txt: Added.
* fast/dom/shadow/content-element-user-agent-shadow.html: Added.
* platform/chromium-win/fast/html/details-remove-summary-1-and-click-expected.txt:
* platform/chromium-win/fast/html/details-remove-summary-4-and-click-expected.txt:
* platform/gtk/fast/html/details-remove-summary-1-and-click-expected.txt:
* platform/gtk/fast/html/details-remove-summary-4-and-click-expected.txt:
* platform/mac/fast/html/details-remove-summary-1-and-click-expected.txt:
* platform/mac/fast/html/details-remove-summary-4-and-click-expected.txt:
* platform/qt/fast/html/details-remove-summary-1-and-click-expected.txt:
* platform/qt/fast/html/details-remove-summary-4-and-click-expected.txt:

Canonical link: https://commits.webkit.org/97382@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109721 268f45cc-cd09-0410-ab3c-d52691b4dbfc