Source/WebCore/html/shadow/HTMLContentElement.cpp
@@ -44,8 +44,7 @@ static const QualifiedName& contentTagName()
 #if ENABLE(SHADOW_DOM)
     return HTMLNames::contentTag;
 #else
-    DEFINE_STATIC_LOCAL(QualifiedName, tagName, (nullAtom, "webkitShadowContent", HTMLNames::divTag.namespaceURI()));
-    return tagName;
+    return HTMLNames::webkitShadowContentTag
 #endif
 }
 
